add instructions to settings popup

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -28,6 +28,13 @@
 			<label for='language'>Language: </label>
 			<input id='language' type='text' />
 		</div>
+		<div>
+			<ul>
+				<li>All parameter values should be lowercase.</li>
+				<li>Country code should be a valid two-letter country code.</li>
+				<li>Language should be the name of a language expressed in English. E.g. "french" not "Francais".</li>
+			</ul>
+		</div>
 	</div>
 </body>
 </html>
