implement saving parameters set in popup to local storage

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -17,6 +17,8 @@
 			width:90px;
 		}
 	</style>
+	<script src="js/libs/jquery-2.1.3.min.js"></script>
+	<script src="js/popup.js"></script>
 </head>
 <body>
 	<div class='settings'>
@@ -34,6 +36,9 @@
 				<li>Country code should be a valid two-letter country code.</li>
 				<li>Language should be the name of a language expressed in English. E.g. "french" not "Francais".</li>
 			</ul>
+		</div>
+		<div>
+			<input id='save' type='button' value='Save' />
 		</div>
 	</div>
 </body>
