add language code to settings

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -30,11 +30,16 @@
 			<label for='language'>Language: </label>
 			<input id='language' type='text' />
 		</div>
+		<div class='setting'>
+			<label for='language-code'>Language Code: </label>
+			<input id='language-code' type='text' />
+		</div>
 		<div>
 			<ul>
 				<li>All parameter values should be lowercase.</li>
 				<li>Country code should be a valid two-letter country code.</li>
 				<li>Language should be the name of a language expressed in English. E.g. "french" not "Francais".</li>
+				<li>Language code should be an ISO two-letter language code. E.g. "en" or "fr".</li>
 			</ul>
 		</div>
 		<div>
