--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -14,7 +14,7 @@
 		.settings label
 		{
 			display:inline-block;
-			width:90px;
+			width:100px;
 		}
 	</style>
 	<script src="js/libs/jquery-2.1.3.min.js"></script>
@@ -34,12 +34,17 @@
 			<label for='language-code'>Language Code: </label>
 			<input id='language-code' type='text' />
 		</div>
+		<div class='setting'>
+			<label for='sale-type'>Default Sale Type: </label>
+			<input id='sale-type' type='text' />
+		</div>
 		<div>
 			<ul>
 				<li>All parameter values should be lowercase.</li>
 				<li>Country code should be a valid two-letter country code.</li>
 				<li>Language should be the name of a language expressed in English. E.g. "french" not "Francais".</li>
 				<li>Language code should be an ISO two-letter language code. E.g. "en" or "fr".</li>
+				<li>Default sale type should match a sale type in the "Filter Sale Type" drop down list. E.g. "DAILY DEAL".</li>
 			</ul>
 		</div>
 		<div>
