add sale type filter option to show all items on sale

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -44,7 +44,11 @@
 				<li>Country code should be a valid two-letter country code.</li>
 				<li>Language should be the name of a language expressed in English. E.g. "french" not "Francais".</li>
 				<li>Language code should be an ISO two-letter language code. E.g. "en" or "fr".</li>
-				<li>Default sale type should match a sale type in the "Filter Sale Type" drop down list. E.g. "DAILY DEAL".</li>
+				<li>
+					Default sale type should match a sale type in the "Filter Sale Type" drop down list. E.g. "DAILY DEAL".
+					Sale type "*" shows all items.
+					Sale type "!*" shows all items on sale.
+				</li>
 			</ul>
 		</div>
 		<div>
