add negated sale type filter values and functionality

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -48,6 +48,7 @@
 					Default sale type should match a sale type in the "Filter Sale Type" drop down list. E.g. "DAILY DEAL".
 					Sale type "*" shows all items.
 					Sale type "!*" shows all items on sale.
+					Sale types starting with "!" filter for items on sale that are NOT that sale type.
 				</li>
 			</ul>
 		</div>
